ajout section à propos

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <main>
         <section class="hero">
-            <img src="images/avatar.png" alt="Illustration de Dam Derumier" class="profile-img">
+            <img src="img/dam.jpg" alt="Illustration de Dam Derumier" class="profile-img">
             <h2>🚀 Développement Web & UX Design</h2>
             <p>Je crée des expériences web accessibles, fun et intuitives !</p>
             <a href="projects.html" class="btn">Voir mes projets</a>
