Projets: maj de la mise en page

--- a/projects.html
+++ b/projects.html
@@ -3,12 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mes Projets</title>
+    <title>Projets - Dam Derumier</title>
     <link rel="stylesheet" href="css/style.css">
+    <script defer src="js/script.js"></script>
 </head>
 <body>
     <header>
         <h1>🛠️ Mes Projets</h1>
+        <p class="tagline">Quelques créations dont je suis fière ! 🚀</p>
         <nav>
             <ul>
                 <li><a href="index.html">Accueil</a></li>
@@ -19,21 +21,53 @@
     </header>
 
     <main>
-        <section>
-            <h2>🔹 Shokoban</h2>
-            <p>Un jeu en Java en architecture MVC.</p>
-            <a href="https://github.com/damderumier/shokoban">Voir sur GitHub</a>
+        <!-- Projet Shokoban -->
+        <section class="project">
+            <img src="images/shokoban.png" alt="Aperçu du jeu Shokoban" class="project-img">
+            <div class="project-info">
+                <h2>🕹️ Shokoban (Jeu en Java)</h2>
+                <p>Un jeu de puzzle développé en Java en architecture MVC.</p>
+                <p><strong>Technologies utilisées :</strong> Java, POO, MVC</p>
+                <a href="https://github.com/damderumier/shokoban" class="btn">🔗 Voir le projet</a>
+            </div>
         </section>
 
-        <section>
-            <h2>🔹 Blagounette</h2>
-            <p>Un site web fun pour partager des blagues !</p>
-            <a href="https://aubreykazimir.github.io/blagounette/">Voir le projet</a>
+        <!-- Projet IMC -->
+        <section class="project">
+            <img src="images/imc.png" alt="Aperçu de l'application IMC" class="project-img">
+            <div class="project-info">
+                <h2>📊 IMC - Calculateur</h2>
+                <p>Application web permettant de calculer l'IMC de l'utilisateur.</p>
+                <p><strong>Technologies utilisées :</strong> HTML, CSS, JavaScript</p>
+                <a href="https://github.com/damderumier/imc" class="btn">🔗 Voir le projet</a>
+            </div>
+        </section>
+
+        <!-- Projet Blagounette -->
+        <section class="project">
+            <img src="images/blagounette.png" alt="Capture du site Blagounette" class="project-img">
+            <div class="project-info">
+                <h2>😂 Blagounette</h2>
+                <p>Un site web humoristique affichant des blagues aléatoires.</p>
+                <p><strong>Technologies utilisées :</strong> HTML, CSS, JavaScript</p>
+                <a href="https://aubreykazimir.github.io/blagounette/" class="btn">🔗 Voir le projet</a>
+            </div>
+        </section>
+
+        <!-- Projets UX Design -->
+        <section class="project">
+            <img src="images/uxdesign.png" alt="Exemple d'interface UX Design" class="project-img">
+            <div class="project-info">
+                <h2>🎨 UX Design</h2>
+                <p>Projets réalisés avec Figma dans le cadre de ma formation UX.</p>
+                <p><strong>Outils utilisés :</strong> Figma</p>
+                <a href="https://www.figma.com/files/team/1288553264654915984/project/109151399/Team-project?fuid=1253068665250177748" class="btn">🔗 Voir les maquettes</a>
+            </div>
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2024 Dam Derumier</p>
+        <p>&copy; 2024 Dam Derumier | <a href="index.html">Retour à l'accueil</a></p>
     </footer>
 </body>
 </html>
