--- a/contact.html
+++ b/contact.html
@@ -9,13 +9,14 @@
 </head>
 <body>
     <header>
-        <h1>📬 Me Contacter</h1>
-        <p>Envie de discuter, poser une question ou juste envoyer une blague ? Fais-toi plaisir ! 😜</p>
+        <h1>Me Contacter</h1>
+        <p class="tagline">Envie de discuter, poser une question ou juste envoyer une blague ? Fais-toi plaisir ! 😜</p>
         <nav>
             <ul>
                 <li><a href="index.html">Accueil</a></li>
                 <li><a href="about.html">À propos</a></li>
                 <li><a href="projects.html">Projets</a></li>
+                <li><a href="cv.html" aria-label="CV">Zieuter le cv</a></li>
             </ul>
         </nav>
     </header>
@@ -24,21 +25,22 @@
         <section class="contact-form">
             <h2>📝 Envoie-moi un message</h2>
             <form action="https://formspree.io/f/mnqlodzo" method="POST">
-                <label for="name">👤 Nom :</label>
+                <label for="name"> Nom, prénom:</label>
                 <input type="text" id="name" name="name" required placeholder="Ton prénom cool ici">
                 
-                <label for="email">📧 Email :</label>
+                <label for="email">Email:</label>
                 <input type="email" id="email" name="_replyto" required placeholder="ton.email@example.com">
 
-                <label for="message">💬 Message :</label>
+                <label for="message">Message:</label>
                 <textarea id="message" name="message" rows="5" required placeholder="Balance ta question, ton projet ou ta meilleure blague !"></textarea>
 
-                <button type="submit">🚀 Envoyer</button>
+                <button type="submit">Envoyer</button>
             </form>
         </section>
 
         <section class="social-links">
-            <h2>🔗 Mes Réseaux</h2>
+            <h2>Et si on gardait contact ?</h2>
+            <p class="tagline"> Psst, apparemment, je fais de trop beaux posts sur LinkedIn! Va checker ça ! </p>
             <ul>
                 <li><a href="mailto:derumier.dam@gmail.com">📧 Email</a></li>
                 <li><a href="https://www.linkedin.com/in/damderumier" target="_blank">💼 LinkedIn</a></li>
@@ -48,7 +50,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 Dam Derumier | <a href="index.html">Retour à l'accueil</a></p>
+        <p>&copy; 2025 Dam Derumier | <a href="index.html">Retour à l'accueil</a></p>
     </footer>
 </body>
 </html>
