--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
 </head>
 <body>
     <header>
-        <h1 tabindex="0">🎉 Bienvenue sur mon portfolio !</h1>
+        <h1 tabindex="0">Bienvenue sur mon portfolio !</h1>
         <p class="tagline">Développeuse web passionnée - UX Designer en herbe - Geek avec un bon sens de l'humour 😜</p>
         <nav>
             <ul>
                 <li><a href="index.html" aria-label="Accueil">Accueil</a></li>
                 <li><a href="about.html" aria-label="À propos">À propos</a></li>
                 <li><a href="projects.html" aria-label="Projets">Projets</a></li>
+                <li><a href="cv.html" aria-label="CV">Zieuter le cv</a></li>
                 <li><a href="contact.html" aria-label="Contact">Contact</a></li>
             </ul>
         </nav>
@@ -24,14 +25,14 @@
     <main>
         <section class="hero">
             <img src="img/dam.jpg" alt="Illustration de Dam Derumier" class="profile-img">
-            <h2>🚀 Développement Web & UX Design</h2>
+            <h2>Développement Web & UX Design</h2>
             <p>Je crée des expériences web accessibles, fun et intuitives !</p>
             <a href="projects.html" class="btn">Voir mes projets</a>
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2024 Dam Derumier | <a href="contact.html">Me contacter</a></p>
+        <p>&copy; 2025 Dam Derumier | <a href="contact.html">Me contacter</a></p>
     </footer>
 </body>
 </html>
