Mise en page général

--- a/projects.html
+++ b/projects.html
@@ -15,6 +15,7 @@
             <ul>
                 <li><a href="index.html">Accueil</a></li>
                 <li><a href="about.html">À propos</a></li>
+                <li><a href="cv.html">Zieuter le cv</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
@@ -67,7 +68,31 @@
     </main>
 
     <footer>
-        <p>&copy; 2025 Dam Derumier | <a href="index.html">Retour à l'accueil</a></p>
+        <div class="footer-container">
+            <div class="footer-left">
+                <p><strong>Contrat d’apprentissage</strong><br>
+                    Rythme: 3 semaines en entreprise / 1 semaine en école</p>
+                    <p>Formation éligible à l’Aide Exceptionnelle de 6000€</p>
+            </div>
+            <div class="footer-center">
+                <p>&copy; 2025 Dam Derumier | <a href="contact.html">Contact</a></p>
+                <div class="footer-icons">
+                    <a href="https://www.linkedin.com/in/damderumier" target="_blank" aria-label="Mon profil LinkedIn">
+                        <img src="img/linkedin.png" alt="LinkedIn" class="social-icon">
+                    </a>
+                    <a href="https://github.com/damderumier" target="_blank" aria-label="Mon profil GitHub">
+                        <img src="img/github.png" alt="GitHub" class="social-icon">
+                    </a>
+                </div>
+            </div>
+            <div class="footer-right">
+                <p><strong>Contact référent :</strong><br>
+                    Jérémy Rocamora
+                    <a href="mailto:j.rocamora@3wacademy.fr">| j.rocamora@3wacademy.fr</a></p>
+            </div>
+        </div>
     </footer>
+<!-- Bouton Retour en Haut -->
+<button id="scrollTopBtn" aria-label="Revenir en haut">⬆️</button>
 </body>
 </html>
