--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <li><a href="about.html" aria-label="À propos">À propos</a></li>
                 <li><a href="projects.html" aria-label="Projets">Projets</a></li>
                 <li><a href="cv.html" aria-label="CV">Zieuter le cv</a></li>
-                <li><a href="contact.html" aria-label="Contact">Contact</a></li>
+                
             </ul>
         </nav>
     </header>
@@ -32,7 +32,31 @@
     </main>
 
     <footer>
-        <p>&copy; 2025 Dam Derumier | <a href="contact.html">Me contacter</a></p>
+        <div class="footer-container">
+            <div class="footer-left">
+                <p><strong>Contrat d’apprentissage</strong><br>
+                    Rythme: 3 semaines en entreprise / 1 semaine en école</p>
+                    <p>Formation éligible à l’Aide Exceptionnelle de 6000€</p>
+            </div>
+            <div class="footer-center">
+                <p>&copy; 2025 Dam Derumier | <a href="contact.html">Contact</a></p>
+                <div class="footer-icons">
+                    <a href="https://www.linkedin.com/in/damderumier" target="_blank" aria-label="Mon profil LinkedIn">
+                        <img src="img/linkedin.png" alt="LinkedIn" class="social-icon">
+                    </a>
+                    <a href="https://github.com/damderumier" target="_blank" aria-label="Mon profil GitHub">
+                        <img src="img/github.png" alt="GitHub" class="social-icon">
+                    </a>
+                </div>
+            </div>
+            <div class="footer-right">
+                <p><strong>Contact référent :</strong><br>
+                    Jérémy Rocamora
+                    <a href="mailto:j.rocamora@3wacademy.fr">| j.rocamora@3wacademy.fr</a></p>
+            </div>
+        </div>
     </footer>
+<!-- Bouton Retour en Haut -->
+<button id="scrollTopBtn" aria-label="Revenir en haut">⬆️</button>
 </body>
 </html>
