--- a/projects.html
+++ b/projects.html
@@ -24,7 +24,7 @@
     <main>
         <!-- Projet Shokoban -->
         <section class="project">
-            <img src="images/shokoban.png" alt="Aperçu du jeu Shokoban" class="project-img">
+            <img src="img/sokoban.png" alt="Aperçu du jeu Shokoban" class="project-img">
             <div class="project-info">
                 <h2>Shokoban (Jeu en Java)</h2>
                 <p>Un jeu de puzzle développé en Java en architecture MVC.</p>
@@ -35,7 +35,7 @@
 
         <!-- Projet IMC -->
         <section class="project">
-            <img src="images/imc.png" alt="Aperçu de l'application IMC" class="project-img">
+            <img src="img/imc.png" alt="Aperçu de l'application IMC" class="project-img">
             <div class="project-info">
                 <h2>IMC - Calculateur</h2>
                 <p>Application web permettant de calculer l'IMC de l'utilisateur.</p>
@@ -46,7 +46,7 @@
 
         <!-- Projet Blagounette -->
         <section class="project">
-            <img src="images/blagounette.png" alt="Capture du site Blagounette" class="project-img">
+            <img src="img/Blagounette.png" alt="Capture du site Blagounette" class="project-img">
             <div class="project-info">
                 <h2>Blagounette</h2>
                 <p>Un site web humoristique affichant des blagues aléatoires.</p>
@@ -57,7 +57,7 @@
 
         <!-- Projets UX Design -->
         <section class="project">
-            <img src="images/uxdesign.png" alt="Exemple d'interface UX Design" class="project-img">
+            <img src="img/ux-ui.webp" alt="Exemple d'interface UX Design" class="project-img">
             <div class="project-info">
                 <h2>UX Design</h2>
                 <p>Projets réalisés avec Figma dans le cadre de ma formation UX.</p>
