--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dam Derumier | Portfolio</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" type="image/x-icon" href="img/favicon.ico">
+
     <script defer src="js/script.js"></script>
 </head>
 <body>
@@ -24,7 +26,7 @@
 
     <main>
         <section class="hero">
-            <img src="img/dam.jpg" alt="Illustration de Dam Derumier" class="profile-img">
+            <img src="img/logo.png" alt="Logo de Dam Derumier" class="profile-img">
             <h2>Développement Web & UX Design</h2>
             <p>Je crée des expériences web accessibles, fun et intuitives !</p>
             <a href="projects.html" class="btn">Voir mes projets</a>
