--- a/about.html
+++ b/about.html
@@ -16,11 +16,12 @@
       </p>
       <nav>
         <ul>
-          <li><a href="index.html">Accueil</a></li>
-          <li><a href="projects.html">Projets</a></li>
+          <li><a href="index.html" aria-label="Accueil">Accueil</a></li>
+          <li><a href="about.html" aria-label="À propos" class="active">À propos</a></li>
+          <li><a href="projects.html" aria-label="Projets">Projets</a></li>
           <li><a href="cv.html" aria-label="CV">Zieuter le cv</a></li>
           <li><a href="contact.html">Contact</a></li>
-        </ul>
+      </ul>
       </nav>
     </header>
 
@@ -81,17 +82,17 @@
             Je suis une grande fan de jeux vidéo (surtout les jeux de stratégie
             et d’équipe) !
           </li>
-          <li>J’adore le e-sportet j’organise parfois des tournois!</li>
+          <li>J’adore le e-sport et j’organise parfois des tournois 🎮 </li>
           <li>
             Ma philosophie de code : "Un bug ? C'est juste une fonctionnalité
             alternative !"
           </li>
           <li>
             Si je ne code pas, c’est que je suis probablement en train de
-            réfléchir à optimiser en buvant un café...
+            réfléchir à optimiser en buvant un café ☕
           </li>
           <li>
-            J'ai une mention humour sur le certificat de mon service civique ! 
+            J'ai une mention humour sur le certificat de mon service civique ! 🥳
           </li>
         </ul>
       </section>
