--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
         <p class="tagline">Développeuse web passionnée - UX Designer en herbe - Geek avec un bon sens de l'humour 😜</p>
         <nav>
             <ul>
-                <li><a href="index.html" aria-label="Accueil">Accueil</a></li>
+                <li><a href="index.html" aria-label="Accueil" class="active">Accueil</a></li>
                 <li><a href="about.html" aria-label="À propos">À propos</a></li>
                 <li><a href="projects.html" aria-label="Projets">Projets</a></li>
                 <li><a href="cv.html" aria-label="CV">Zieuter le cv</a></li>
-                
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
