--- a/projects.html
+++ b/projects.html
@@ -14,9 +14,10 @@
         <p class="tagline">Quelques créations dont je suis fière ! 🚀</p>
         <nav>
             <ul>
-                <li><a href="index.html">Accueil</a></li>
-                <li><a href="about.html">À propos</a></li>
-                <li><a href="cv.html">Zieuter le cv</a></li>
+                <li><a href="index.html" aria-label="Accueil">Accueil</a></li>
+                <li><a href="about.html" aria-label="À propos">À propos</a></li>
+                <li><a href="projects.html" aria-label="Projets" class="active">Projets</a></li>
+                <li><a href="cv.html" aria-label="CV">Zieuter le cv</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
