--- a/contact.html
+++ b/contact.html
@@ -14,10 +14,11 @@
         <p class="tagline">Envie de discuter, poser une question ou juste envoyer une blague ? Fais-toi plaisir ! 😜</p>
         <nav>
             <ul>
-                <li><a href="index.html">Accueil</a></li>
-                <li><a href="about.html">À propos</a></li>
-                <li><a href="projects.html">Projets</a></li>
+                <li><a href="index.html" aria-label="Accueil">Accueil</a></li>
+                <li><a href="about.html" aria-label="À propos">À propos</a></li>
+                <li><a href="projects.html" aria-label="Projets">Projets</a></li>
                 <li><a href="cv.html" aria-label="CV">Zieuter le cv</a></li>
+                <li><a href="contact.html" class="active">Contact</a></li>
             </ul>
         </nav>
     </header>
