--- a/cv.html
+++ b/cv.html
@@ -14,9 +14,10 @@
         <p class="tagline">Ou CV pour les intimes, mon parcours et mes compétences en un coup d'œil !</p>
         <nav>
             <ul>
-                <li><a href="index.html">Accueil</a></li>
-                <li><a href="about.html">À propos</a></li>
-                <li><a href="projects.html">Projets</a></li>
+                <li><a href="index.html" aria-label="Accueil">Accueil</a></li>
+                <li><a href="about.html" aria-label="À propos">À propos</a></li>
+                <li><a href="projects.html" aria-label="Projets">Projets</a></li>
+                <li><a href="cv.html" aria-label="CV" class="active">Zieuter le cv</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
