--- a/about.html
+++ b/about.html
@@ -114,6 +114,9 @@
                     <a href="https://github.com/damderumier" target="_blank" aria-label="Mon profil GitHub">
                         <img src="img/github.png" alt="GitHub" class="social-icon">
                     </a>
+                    <a href="mailto:derumier.dam@gmail.com" target="_blank" aria-label="Mon adresse mail">
+                      <img src="img/mail.png" alt="Gmail" class="social-icon">
+                  </a>
                 </div>
             </div>
             <div class="footer-right">
