--- a/contact.html
+++ b/contact.html
@@ -43,11 +43,17 @@
         <section class="social-links">
             <h2>Et si on gardait contact ?</h2>
             <p class="tagline"> Psst, apparemment, je fais de trop beaux posts sur LinkedIn! Va checker ça ! </p>
-            <ul>
-                <li><a href="mailto:derumier.dam@gmail.com">📧 Email</a></li>
-                <li><a href="https://www.linkedin.com/in/damderumier" target="_blank">💼 LinkedIn</a></li>
-                <li><a href="https://github.com/damderumier" target="_blank">🐙 GitHub</a></li>
-            </ul>
+            <div class="footer-icons">
+                    <a href="https://www.linkedin.com/in/damderumier" target="_blank" aria-label="Mon profil LinkedIn">
+                        <img src="img/linkedin.png" alt="LinkedIn" class="social-icon">
+                    </a>
+                    <a href="https://github.com/damderumier" target="_blank" aria-label="Mon profil GitHub">
+                        <img src="img/github.png" alt="GitHub" class="social-icon">
+                    </a>
+                    <a href="mailto:derumier.dam@gmail.com" target="_blank" aria-label="Mon adresse mail">
+                        <img src="img/mail.png" alt="Gmail" class="social-icon">
+                    </a>
+                </div>
         </section>
     </main>
 
@@ -60,12 +66,15 @@
             </div>
             <div class="footer-center">
                 <p>&copy; 2025 Dam Derumier | <a href="contact.html">Contact</a></p>
-                <div class="footer-icons">
+                <div class="contact-icon">
                     <a href="https://www.linkedin.com/in/damderumier" target="_blank" aria-label="Mon profil LinkedIn">
                         <img src="img/linkedin.png" alt="LinkedIn" class="social-icon">
                     </a>
                     <a href="https://github.com/damderumier" target="_blank" aria-label="Mon profil GitHub">
                         <img src="img/github.png" alt="GitHub" class="social-icon">
+                    </a>
+                    <a href="mailto:derumier.dam@gmail.com" target="_blank" aria-label="Mon adresse mail">
+                        <img src="img/mail.png" alt="Gmail" class="social-icon">
                     </a>
                 </div>
             </div>
