--- a/cv.html
+++ b/cv.html
@@ -30,11 +30,11 @@
 
             <!-- Affichage du CV PDF -->
             <div class="cv-container">
-                <iframe src="cv/dam-derumier.pdf" title="CV de Dam Derumier" class="cv-iframe"></iframe>
+                <iframe src="cv/Dam DERUMIER Alternance FullStackDev.pdf" title="CV de Dam Derumier" class="cv-iframe"></iframe>
             </div>
 
             <!-- Bouton de téléchargement -->
-            <a href="cv/dam-derumier.pdf" download="Dam_Derumier_CV.pdf" class="btn">
+            <a href="cv/Dam DERUMIER Alternance FullStackDev.pdf" download="Dam_Derumier_CV.pdf" class="btn">
                 Télécharger mon CV
             </a>
         </section>
