--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
     <main>
         <section class="contact-form">
             <h2>📝 Envoie-moi un message</h2>
-            <form action="https://formspree.io/f/mnqlodzo" method="POST">
+            <form action="https://formspree.io/f/xzzrbjek" method="POST">
                 <label for="name"> Nom, prénom:</label>
                 <input type="text" id="name" name="name" required placeholder="Ton prénom cool ici">
                 
