MAJ global, cv et about page

--- a/cv.html
+++ b/cv.html
@@ -30,23 +30,17 @@
 
             <!-- Affichage du CV PDF -->
             <div class="cv-container">
-                <iframe src="cv/Dam DERUMIER - Alternance - update booster.pdf" title="CV de Dam Derumier" class="cv-iframe"></iframe>
+                <iframe src="cv/CV - DAM DERUMIER ALTERNANCE.pdf" title="CV de Dam Derumier" class="cv-iframe"></iframe>
             </div>
 
             <!-- Bouton de téléchargement -->
-            <a href="cv/Dam DERUMIER - Alternance - update booster.pdf" download="Dam DERUMIER - Alternance - update booster.pdf" class="btn">
+            <a href="cv/CV - DAM DERUMIER ALTERNANCE.pdf" download="Dam DERUMIER - Alternance - update booster.pdf" class="btn">
                 Télécharger mon CV
             </a>
         </section>
     </main>
 
     <footer>
-        <div class="footer-container">
-            <div class="footer-left">
-                <p><strong>Contrat d’apprentissage</strong><br>
-                    Rythme: 3 semaines en entreprise / 1 semaine en école</p>
-                    <p>Formation éligible à l’Aide Exceptionnelle de 5000€</p>
-            </div>
             <div class="footer-center">
                 <p>&copy; 2025 Dam Derumier | <a href="contact.html">Contact</a></p>
                 <div class="footer-icons">
@@ -60,11 +54,6 @@
                         <img src="img/mail.png" alt="Gmail" class="social-icon">
                     </a>
                 </div>
-            </div>
-            <div class="footer-right">
-                <p><strong>Contact référent :</strong><br>
-                    Jérémy Rocamora
-                    <a href="mailto:j.rocamora@3wacademy.fr">| j.rocamora@3wacademy.fr</a></p>
             </div>
         </div>
     </footer>
