--- a/contact.html
+++ b/contact.html
@@ -57,16 +57,10 @@
         </section>
     </main>
 
-    <footer>
-        <div class="footer-container">
-            <div class="footer-left">
-                <p><strong>Contrat d’apprentissage</strong><br>
-                    Rythme: 3 semaines en entreprise / 1 semaine en école</p>
-                    <p>Formation éligible à l’Aide Exceptionnelle de 5000€</p>
-            </div>
+<footer>
             <div class="footer-center">
                 <p>&copy; 2025 Dam Derumier | <a href="contact.html">Contact</a></p>
-                <div class="contact-icon">
+                <div class="footer-icons">
                     <a href="https://www.linkedin.com/in/damderumier" target="_blank" aria-label="Mon profil LinkedIn">
                         <img src="img/linkedin.png" alt="LinkedIn" class="social-icon">
                     </a>
@@ -77,11 +71,6 @@
                         <img src="img/mail.png" alt="Gmail" class="social-icon">
                     </a>
                 </div>
-            </div>
-            <div class="footer-right">
-                <p><strong>Contact référent :</strong><br>
-                    Jérémy Rocamora
-                    <a href="mailto:j.rocamora@3wacademy.fr">| j.rocamora@3wacademy.fr</a></p>
             </div>
         </div>
     </footer>
