--- a/cv.html
+++ b/cv.html
@@ -30,11 +30,11 @@
 
             <!-- Affichage du CV PDF -->
             <div class="cv-container">
-                <iframe src="cv/CV - DAM DERUMIER ALTERNANCE.pdf" title="CV de Dam Derumier" class="cv-iframe"></iframe>
+                <iframe src="cv/CV refont.pdf" title="CV de Dam Derumier" class="cv-iframe"></iframe>
             </div>
 
             <!-- Bouton de téléchargement -->
-            <a href="cv/CV - DAM DERUMIER ALTERNANCE.pdf" download="Dam DERUMIER - Alternance - update booster.pdf" class="btn">
+            <a href="cv/CV refont.pdf" download="Dam DERUMIER - Alternance - update booster.pdf" class="btn">
                 Télécharger mon CV
             </a>
         </section>
