--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
         <h2>Pourquoi l'informatique ?</h2>
         <p>
           Depuis toujours, l'informatique m'attire, mais c'est le développement
-          web qui a volé mon cœur (et quelques nuits de sommeil).
+          web ainsi que la conception d'applications qui ont volé mon cœur (et quelques nuits de sommeil).
         </p>
         <p>
           Ayant grandi dans un monde où l'accessibilité était visiblement en
