--- a/index.html
+++ b/index.html
@@ -27,8 +27,12 @@
     <main>
         <section class="hero">
             <img src="img/logo.png" alt="Logo de Dam Derumier" class="profile-img">
-            <h2>Développement Web & UX Design</h2>
+            <h2>Développement et conception d'applications & UX Design</h2>
             <p>Je crée des expériences web accessibles, fun et intuitives !</p>
+            <p>Ici, je montre mes projets qui me tiennent à coeur afin de vous montrer mes compétences... </p>
+            <p>Vous êtes prêt.e pour le voyage ? </p>
+            <p>C'est parti !</p>
+            <p>Un petit clic sur le bouton ci-dessous pour l'immersion ! 🚀</p>
             <a href="projects.html" class="btn">Voir mes projets</a>
         </section>
     </main>
