--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
       <p class="tagline">
         Développeuse Web & UX Designer | Geek dans l'âme | Un brin blagueuse 😜
       </p>
-      <nav>
+      <nav class="main-nav">
         <ul>
           <li><a href="index.html" aria-label="Accueil">Accueil</a></li>
           <li><a href="about.html" aria-label="À propos" class="active">À propos</a></li>
