--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
     <header>
         <h1>Me Contacter</h1>
         <p class="tagline">Envie de discuter, poser une question ou juste envoyer une blague ? Fais-toi plaisir ! 😜</p>
-        <nav>
+        <nav class="main-nav">
             <ul>
                 <li><a href="index.html" aria-label="Accueil">Accueil</a></li>
                 <li><a href="about.html" aria-label="À propos">À propos</a></li>
