--- a/cv.html
+++ b/cv.html
@@ -12,7 +12,7 @@
     <header>
         <h1>Mon Curriculum Vitae</h1>
         <p class="tagline">Ou CV pour les intimes, mon parcours et mes compétences en un coup d'œil !</p>
-        <nav>
+        <nav class="main-nav">
             <ul>
                 <li><a href="index.html" aria-label="Accueil">Accueil</a></li>
                 <li><a href="about.html" aria-label="À propos">À propos</a></li>
