--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <h1 tabindex="0">Bienvenue sur mon portfolio !</h1>
         <p class="tagline">Développeuse web passionnée - UX Designer en herbe - Geek avec un bon sens de l'humour 😜</p>
-        <nav>
+        <nav class="main-nav">
             <ul>
                 <li><a href="index.html" aria-label="Accueil" class="active">Accueil</a></li>
                 <li><a href="about.html" aria-label="À propos">À propos</a></li>
