--- a/projects.html
+++ b/projects.html
@@ -12,7 +12,7 @@
     <header>
         <h1>Mes Projets</h1>
         <p class="tagline">Quelques créations dont je suis fière ! 🚀</p>
-        <nav>
+        <nav class="main-nav">
             <ul>
                 <li><a href="index.html" aria-label="Accueil">Accueil</a></li>
                 <li><a href="about.html" aria-label="À propos">À propos</a></li>
