--- a/cv.html
+++ b/cv.html
@@ -34,7 +34,7 @@
             </div>
 
             <!-- Bouton de téléchargement -->
-            <a href="cv/CV refont.pdf" download="Dam DERUMIER - Alternance - update booster.pdf" class="btn">
+            <a href="cv/CV refont.pdf" download="Dam DERUMIER.pdf" class="btn">
                 Télécharger mon CV
             </a>
         </section>
