Correction image + logo

--- a/contact.html
+++ b/contact.html
@@ -42,16 +42,10 @@
 
         <section class="social-links">
             <h2>Et si on gardait contact ?</h2>
-            <p class="tagline"> Psst, apparemment, je fais de trop beaux posts sur LinkedIn! Va checker ça ! </p>
+            <p class="tagline"> Psst, apparemment, je fais de trop beaux posts sur LinkedIn! Va checker ça ! ⬇️ </p>
             <div class="footer-icons">
                     <a href="https://www.linkedin.com/in/damderumier" target="_blank" aria-label="Mon profil LinkedIn">
                         <img src="img/linkedin.png" alt="LinkedIn" class="social-icon">
-                    </a>
-                    <a href="https://github.com/damderumier" target="_blank" aria-label="Mon profil GitHub">
-                        <img src="img/github.png" alt="GitHub" class="social-icon">
-                    </a>
-                    <a href="mailto:derumier.dam@gmail.com" target="_blank" aria-label="Mon adresse mail">
-                        <img src="img/mail.png" alt="Gmail" class="social-icon">
                     </a>
                 </div>
         </section>
